@@ -88,9 +88,31 @@ bool OpenInput(const ACE_TString& filename,
     const AVCodec *aud_dec;
     const AVCodec *vid_dec;
 
-    if (avformat_open_input(&fmt_ctx, filename.c_str(), iformat, &options) < 0)
+    auto utf8name = UnicodeToUtf8(filename);
+
+    if (utf8name.substr(0, 8) == "file:///")
     {
-        MYTRACE(ACE_TEXT("FFmpeg opened %s\n"), filename.c_str());
+        utf8name = utf8name.substr(8);
+        ACE_CString decoded;
+        for (size_t i = 0; i < utf8name.length(); ++i)
+        {
+            if (utf8name[i] == '%' && i + 2 < utf8name.length())
+            {
+                char hex[3] = { utf8name[i+1], utf8name[i+2], 0 };
+                decoded += static_cast<char>(strtol(hex, nullptr, 16));
+                i += 2;
+            }
+            else
+            {
+                decoded += utf8name[i];
+            }
+        }
+        utf8name = decoded;
+    }
+
+    if (avformat_open_input(&fmt_ctx, utf8name.c_str(), iformat, &options) < 0)
+    {
+        MYTRACE(ACE_TEXT("FFmpeg failed to open %s\n"), filename.c_str());
         goto cleanup;
     }
 
@@ -287,7 +309,7 @@ void FFmpegStreamer::Run()
     if(!SetupInput(in_fmt, options, fmt_ctx, aud_dec_ctx, vid_dec_ctx,
                    audio_stream_index, video_stream_index))
     {
-        MYTRACE("Failed to setup input: %s\n", m_media_in.filename.c_str());
+        MYTRACE(ACE_TEXT("Failed to setup input: %s\n"), m_media_in.filename.c_str());
         m_open.set(false);
         goto end;
     }
@@ -332,7 +354,7 @@ void FFmpegStreamer::Run()
         if(video_filter_graph == nullptr)
         {
             m_open.set(false);
-            MYTRACE("Failed to create video filter. Device: %s, fmt %dx%d@%d fourCC: %u\n",
+            MYTRACE(ACE_TEXT("Failed to create video filter. Device: %s, fmt %dx%d@%d fourCC: %u\n"),
                     m_media_in.filename.c_str(), m_media_out.video.width, m_media_out.video.height,
                     ((m_media_out.video.fps_denominator != 0) ? m_media_out.video.fps_numerator / m_media_out.video.fps_denominator : -1),
                     m_media_out.video.fourcc);
@@ -432,7 +454,7 @@ void FFmpegStreamer::Run()
                 }
                 else
                 {
-                    MYTRACE("Seeked to audio position %u in %s\n", ACE_UINT32(offset_sec * 1000), m_media_in.filename.c_str());
+                    MYTRACE(ACE_TEXT("Seeked to audio position %u in %s\n"), ACE_UINT32(offset_sec * 1000), m_media_in.filename.c_str());
                 }
             }
 
@@ -450,7 +472,7 @@ void FFmpegStreamer::Run()
                 }
                 else
                 {
-                    MYTRACE("Seeked to video position %u in %s\n", ACE_UINT32(offset_sec * 1000), m_media_in.filename.c_str());
+                    MYTRACE(ACE_TEXT("Seeked to video position %u in %s\n"), ACE_UINT32(offset_sec * 1000), m_media_in.filename.c_str());
                 }
 
             }
